# SAFMN_Android

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/com/example/safmn_2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.ncnn.param
app/src/main/java/com/example/safmn_2/: MainActivity.java
app/src/main/java/com/example/safmn_2/adapter/: SpinnerAdapter.java  ViewPagerAdapter.java
app/src/main/java/com/example/safmn_2/cppWrapper/: SAFMNncnn.java
app/src/main/java/com/example/safmn_2/fragment/: homeFragment.java  moreFragment.java
app/src/main/jni/: CMakeLists.txt  SAFMN.cpp  SAFMN_L_Real_LSDIR_x4_v2.pth.ncnn.param
app/src/main/jni/ncnn-20240410-android/arm64-v8a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20240410-android/armeabi-v7a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20240410-android/x86/lib/cmake/ncnn/: ncnn.cmake
app/src/main/res/layout/: activity_main.xml  fragment_home.xml  fragment_more.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/safmn_2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
